2016-05-23  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/functor.boot, src/interp/simpbool.boot
	src/interp/nruncomp.boot: Improve condition handling

2016-05-10  Ralf Hemmecke  <ralf@hemmecke.org>

	* src/interp/ax.boot: fix failing aldor compilation

2016-04-05  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/aggcat.spad, src/algebra/array2.spad:
	Propagate Comparable to sets and arrays

2016-04-05  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/aggcat.spad, src/algebra/vector.spad,
	src/algebra/bags.spad, src/algebra/poltopol.spad:
	Remove useless signatures

2016-03-14  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/aggcat.spad, src/algebra/product.spad:
	Generalize LinearAggregate, propagate Comparable
	src/algebra/Makefile.in: Adjust

2016-02-29  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/indexedp.spad, src/algebra/tensor.spad,
	src/algebra/poly.spad, src/algebra/xlpoly.spad:
	Generalize indexed product

2016-02-29  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/cden.spad, src/algebra/array2.spad
	src/algebra/aggcat2.spad: Generalize aggregates

2016-02-29  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/trigcat.spad, src/algebra/expr.spad.
	src/algebra/combfunc.spad: Partial implementation
	of 'jacobiTheta'

2016-02-29  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/si.spad, src/algebra/intfact.spad,
	src/algebra/pfo.spad, src/algebra/integer.spad,
	src/algebra/pfbr.spad, src/input/bugs2012.input,
	src/interp/spad.lisp: Remove argumentless 'random'

2016-02-29  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/intalg.spad: Minor cleanup and fix

2016-02-22  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/special2.spad: Implement real numeric
	jacobiZeta

2016-02-22  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	Simplify and cleanup C files
	* src/hyper/addfile.h, src/hyper/cond.h,
	src/hyper/dialog.h, src/hyper/display.h,