@@ -1,3 +1,8 @@
+2016-05-24  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
+	* src/lisp/primitives.lisp: Remove problematic
+	optimization
+
 2016-05-23  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
 	* src/interp/functor.boot, src/interp/simpbool.boot
